@@ -1,3 +1,15 @@
+2003-10-23  ABE Yuji <cbo46560@pop12.odn.ne.jp>
+
+	* [w3m-dev 04010] support for deprecated __ss_family
+	* acinclude.m4 (AC_W3M_IPv6): check __ss_family
+	* config.h.in: add HAVE_OLD_SS_FAMILY
+	* ftp.c (ftp_pasv): ifdef HAVE_OLD_SS_FAMILY
+
+2003-10-23  ABE Yuji <cbo46560@pop12.odn.ne.jp>
+
+	* [w3m-dev 04009] ./configure --disable-image problem
+	* file.c (loadHTMLstream): if defined(USE_M17N)
+
 2003-10-22  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 04006] checking GC_version for libgc
